# twenty-four

./: .gitignore  README.md  explore.ipynb  format_code.sh  game.py  pyproject.toml  solver.py
twenty_four/: agent_solver.py  basic_solver.py  game.py
