[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
skip = [".git", "env", "build", "dist"]

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist", "env"]
per-file-ignores = ["__init__.py: F401"]

[project]
name = "twenty-four"
version = "0.1.0"
description = "Twenty Four Game"
requires-python = ">=3.9"
dependencies = [
    "black==24.2.0",
    "isort==5.13.2",
    "flake8-pyproject==1.2.3",
    "flake8-black==0.3.6",
    "flake8-isort==6.1.1"
] 